@@ -5,6 +5,8 @@ Revision history for {{ $dist->name }}:
   - The request and response attributes can take a hash reference
     of headers to forward.
 
+  - The cache is now optional, GH#3.
+
 v0.1.2    2020-10-14 15:01:42+01:00 Europe/London
   [Bug Fixes]
   - The User-Agent header is forwarded as X-Forwarded-User-Agent, GH#1.
